refactor: final frontend overhaul and rigorous prompt update
- Implemented 'Editorial Studio' design system using Tailwind v4 and Framer Motion
- Deconstructed App.tsx into a modular component architecture (Shell, Stage, Sidebar, AnalysisPanel)
- Resolved scrolling issues and improved video layout responsiveness
- Updated evaluation prompt to 'Bar Raiser' persona for stricter, evidence-based scoring
- Optimized dev dependencies and PostCSS/Vite configuration

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@ backend/data/tmp/
 backend/data/cache.json
 backend/data/model.json
 backend/data/prompt.json
+backend/backend/data/cache.json
+backend/backend/data/model.json
+backend/backend/data/prompt.json
+backend/backend/data/uploads/
+backend/backend/data/tmp/
+*.log
+frontend/*.log
